--- a/src/com/Product/form/HoaDonForm.form
+++ b/src/com/Product/form/HoaDonForm.form
@@ -559,10 +559,11 @@
             <Component class="com.Product.GUI.Combobox" name="combobox1">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="3">
-                    <StringItem index="0" value="&#x110;&#xe3; Thanh To&#xe1;n"/>
-                    <StringItem index="1" value="Ch&#x1edd; Thanh To&#xe1;n"/>
-                    <StringItem index="2" value="Ch&#x1b0;a Thanh To&#xe1;n"/>
+                  <StringArray count="4">
+                    <StringItem index="0" value="T&#x1ea5;t C&#x1ea3;"/>
+                    <StringItem index="1" value="&#x110;&#xe3; Thanh To&#xe1;n"/>
+                    <StringItem index="2" value="Ch&#x1edd; Thanh To&#xe1;n"/>
+                    <StringItem index="3" value="Ch&#x1b0;a Thanh To&#xe1;n"/>
                   </StringArray>
                 </Property>
                 <Property name="lineColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -576,10 +577,11 @@
             <Component class="com.Product.GUI.Combobox" name="combobox2">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="3">
-                    <StringItem index="0" value="Ti&#x1ec1;n M&#x1eb7;t"/>
-                    <StringItem index="1" value="Chuy&#x1ec3;n Kho&#x1ea3;n"/>
-                    <StringItem index="2" value=" "/>
+                  <StringArray count="4">
+                    <StringItem index="0" value="T&#x1ea5;t C&#x1ea3;"/>
+                    <StringItem index="1" value="Ti&#x1ec1;n M&#x1eb7;t"/>
+                    <StringItem index="2" value="Chuy&#x1ec3;n Kho&#x1ea3;n"/>
+                    <StringItem index="3" value=" "/>
                   </StringArray>
                 </Property>
               </Properties>
