--- a/src/com/Product/GUI/radio_button/Test.form
+++ b/src/com/Product/GUI/radio_button/Test.form
@@ -23,9 +23,25 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="300" max="-2" attributes="0"/>
-              <Component id="radioButtonCustom5" min="-2" pref="134" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="300" max="-2" attributes="0"/>
+                      <Component id="radioButtonCustom5" min="-2" pref="134" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="168" max="-2" attributes="0"/>
+                      <Component id="radioButtonCustom1" min="-2" pref="134" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="radioButtonCustom2" min="-2" pref="134" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                      <Component id="radioButtonCustom3" min="-2" pref="134" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
               <EmptySpace pref="314" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -33,9 +49,15 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
+              <Component id="radioButtonCustom2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="radioButtonCustom5" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="396" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+              <Component id="radioButtonCustom3" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+              <Component id="radioButtonCustom1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="278" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -44,6 +66,27 @@
     <Component class="com.Product.GUI.radio_button.RadioButtonCustom" name="radioButtonCustom5">
       <Properties>
         <Property name="text" type="java.lang.String" value="radioButtonCustom5"/>
+      </Properties>
+    </Component>
+    <Component class="com.Product.GUI.radio_button.RadioButtonCustom" name="radioButtonCustom1">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="radioButtonCustom1"/>
+      </Properties>
+    </Component>
+    <Component class="com.Product.GUI.radio_button.RadioButtonCustom" name="radioButtonCustom2">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="cc" red="0" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="radioButtonCustom2"/>
+      </Properties>
+    </Component>
+    <Component class="com.Product.GUI.radio_button.RadioButtonCustom" name="radioButtonCustom3">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="radioButtonCustom3"/>
       </Properties>
     </Component>
   </SubComponents>
