--- a/src/com/Product/Service/ThemTenSanPhamJFrame.form
+++ b/src/com/Product/Service/ThemTenSanPhamJFrame.form
@@ -111,6 +111,9 @@
               <Font name="Segoe UI" size="18" style="1"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemThuocTinhActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
