--- a/src/com/Product/Service/ThemMauSacJFrame.form
+++ b/src/com/Product/Service/ThemMauSacJFrame.form
@@ -57,10 +57,10 @@
                           <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
-                                  <Component id="textField2" min="-2" pref="379" max="-2" attributes="0"/>
+                                  <Component id="txt_TenMau" min="-2" pref="379" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="10" max="32767" attributes="0"/>
                               </Group>
-                              <Component id="textField1" max="32767" attributes="0"/>
+                              <Component id="txt_MaMauSac" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -78,9 +78,9 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jLabel1" min="-2" pref="31" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="textField1" min="-2" pref="59" max="-2" attributes="0"/>
+                  <Component id="txt_MaMauSac" min="-2" pref="59" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                  <Component id="textField2" min="-2" pref="58" max="-2" attributes="0"/>
+                  <Component id="txt_TenMau" min="-2" pref="58" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="buttonBadges1" min="-2" pref="49" max="-2" attributes="0"/>
                   <EmptySpace pref="38" max="32767" attributes="0"/>
@@ -97,19 +97,19 @@
             <Property name="text" type="java.lang.String" value="Th&#xea;m M&#xe0;u S&#x1eaf;c"/>
           </Properties>
         </Component>
-        <Component class="com.Product.GUI.textfield.TextField" name="textField1">
+        <Component class="com.Product.GUI.textfield.TextField" name="txt_MaMauSac">
           <Properties>
             <Property name="text" type="java.lang.String" value="###"/>
             <Property name="enabled" type="boolean" value="false"/>
             <Property name="labelText" type="java.lang.String" value="M&#xe3; M&#xe0;u S&#x1eaf;c"/>
           </Properties>
         </Component>
-        <Component class="com.Product.GUI.textfield.TextField" name="textField2">
+        <Component class="com.Product.GUI.textfield.TextField" name="txt_TenMau">
           <Properties>
             <Property name="labelText" type="java.lang.String" value="T&#xea;n M&#xe0;u "/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textField2ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_TenMauActionPerformed"/>
           </Events>
         </Component>
         <Component class="com.Product.swing.ButtonBadges" name="buttonBadges1">
